Introduce the internal backend services

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ Dependencies.toml
 Config.toml
 # the config files used for testing, Uncomment the following line if you want to commit the test config files
 #!**/tests/Config.toml
+
+.vscode/
+.DS_Store
