--- a/session-1/customer_experience_service/Ballerina.toml
+++ b/session-1/customer_experience_service/Ballerina.toml
@@ -9,4 +9,4 @@ sticky = true
 [[tool.openapi]]
 id = "promos"
 targetModule = "promos"
-filePath = "/Users/maryamm/Workspace/Demo/WSO2Con/Integration_Lab/2025-CMB-integration-tutorial/backends/internal/o2mart_promotions_service/main_openapi.yaml"
+filePath = "../../session-1/o2martpromotions_openapi.yaml"
